--- a/deploy/v2/ansible/sap_playbook.yml
+++ b/deploy/v2/ansible/sap_playbook.yml
@@ -15,6 +15,13 @@
       loop: "{{ output.databases|flatten(levels=1) }}"
       when: item.platform == 'HANA'
 
+# Inventory validation for HANA VMs
+- hosts: hanadbnodes
+  roles:
+    - role: inventory-validation
+    when:
+        - hana_database.size != "LargeInstance"   
+
 # Prepare os, disks and mount points on Hana Database servers
 - hosts: hanadbnodes
   become: true
