add zypper re-register

--- a/deploy/v2/ansible/roles/inventory-validation/tasks/repo_validation.yml
+++ b/deploy/v2/ansible/roles/inventory-validation/tasks/repo_validation.yml
@@ -10,6 +10,10 @@
     # placeholder for a valid workaround
     - name: Ensure to re-register SLE instance against the Public Cloud Update Infrastructure servers
       shell: |
+        rm /etc/SUSEConnect
+        rm -f /etc/zypp/{repos,services,credentials}.d/*
+        rm -f /usr/lib/zypp/plugins/services/*
+        sed -i '/^# Added by SMT reg/,+1d' /etc/hosts
         export PYTHONWARNINGS="ignore:Unverified HTTPS request"
         /usr/sbin/registercloudguest --force-new
       register: reg_result
