--- a/deploy/v2/ansible/roles/inventory-validation/tasks/main.yml
+++ b/deploy/v2/ansible/roles/inventory-validation/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Check configurations on HANA VMs
   any_errors_fatal: true
   block:
-    - include_tasks: hostname_validation.yml
-    - incldue_tasks: repo_validation.yml
+    - import_tasks: hostname_validation.yml
+    - import_tasks: repo_validation.yml
       when:
         - ansible_os_family == 'Suse'
