--- a/deploy/v2/ansible/roles/inventory-validation/tasks/repo_validation.yml
+++ b/deploy/v2/ansible/roles/inventory-validation/tasks/repo_validation.yml
@@ -1,13 +1,14 @@
 ---
 
-- name: Ensure zypper repo is configured on HANA VMs
+- name: Ensure zypper repo is configured on HANA VMs for SLES
+  when: ansible_os_family == 'Suse'
   become: yes
   become_user: root
   block:
     - name: Check zypper repo on HANA VMs
       command: zypper lr
   rescue:
-    # placeholder for a valid workaround
+    # Attempt to configure the repo by re-register SLE
     - name: Ensure to re-register SLE instance against the Public Cloud Update Infrastructure servers
       shell: |
         rm /etc/SUSEConnect
@@ -20,6 +21,14 @@
       # registercloudguest rc == 1 when successful
       failed_when: reg_result.rc > 1
 
-- name: Check if zypper repo is configured on HANA VMs
-  command: zypper lr
+    - name: Check if zypper repo is configured on HANA VMs post re-register SLE instance
+      command: zypper lr
+
+- name: Ensure zypper repo is configured on HANA VMs for RedHat
+  when: ansible_os_family == 'RedHat'
+  become: yes
+  become_user: root
+  block:
+    - name: Check yum repo on HANA VMs
+      command: yum repolist
 
