--- a/templates/terraform-deployment-steps.yaml
+++ b/templates/terraform-deployment-steps.yaml
@@ -38,7 +38,7 @@ steps:
       terraform -version
       terraform init
       terraform apply -auto-approve -var-file=../../../templates/tempGen/${{parameters.testCaseName}}.json
-      cd deploy/v2/terraform
+      pwd
       ls -ltr
     displayName: 'Terraform Deployment'
     env:
