--- a/deploy/ansible/roles/inventory-validation/tasks/hostname_validation.yml
+++ b/deploy/ansible/roles/inventory-validation/tasks/hostname_validation.yml
@@ -6,21 +6,13 @@
     hanadbnodes_dict: "{{ hanadbnodes_dict | combine({item.ip_admin_nic : item.dbname}) }}"
   loop: "{{ hana_database.nodes }}"
 
-# SUSE bug 1167134
-- name: Ensure DHCLIENT_SET_HOSTNAME is set to no for SLES
-  when:
-    - ansible_os_family|upper == 'SUSE'
-  lineinfile:
-    path: /etc/sysconfig/network/dhcp
-    regexp: '^DHCLIENT_SET_HOSTNAME='
-    line: DHCLIENT_SET_HOSTNAME="no"
+- name: Check DHCLIENT_SET_HOSTNAME settings
+  shell: grep DHCLIENT_SET_HOSTNAME= /etc/sysconfig/network/dhcp
+  register: dhcp_res
 
-- name: Ensure the correct hostnames are set on HANA VMs
-  hostname:
-    name: "{{ hanadbnodes_dict[inventory_hostname] }}"
-  when: ansible_hostname != hanadbnodes_dict[inventory_hostname]
+- debug:
+    msg: "{{ dhcp_res }}"
 
-# To prevent situation where setting hostname does not work 100%
 - name: Check if the correct hostnames are set on HANA VMs
   fail:
     msg: "Hostname is not set properly for {{ inventory_hostname }}: should be {{ hanadbnodes_dict[inventory_hostname] }} but seen {{ ansible_hostname }}"
