Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,5 +18,5 @@ variables:
 
 steps: 
   - ${{ each variable in variables }}:
-    - script: echo ${{ variables.Key }} 
-    - script: echo ${{ variables.Value }}
+    - script: echo ${{ variable.Key }} 
+    - script: echo ${{ variable.Value }}
