--- a/.pipeline/tf-release.yml
+++ b/.pipeline/tf-release.yml
@@ -56,6 +56,9 @@ stages:
         parameters:
           branch_name: $(sourceBranchName)
           deployer_env: "UNIT"
+      - template: templates/util/collect-deployer-info.yml
+        parameters:
+          deployer_env: "UNIT"
       - template: templates/deployer/post-deployer-steps.yml
         parameters:
           deployer_env: "UNIT"
