--- a/.pipeline/templates/saplandscape/create-saplandscape-steps.yml
+++ b/.pipeline/templates/saplandscape/create-saplandscape-steps.yml
@@ -23,6 +23,7 @@ steps:
       # Modify environment value so it starts with u and with length of 5
       saplib_env=${{parameters.saplib_env}}
       saplib_isRelease=${saplib_env%%$buildId*}
+
       if [ -z "${saplib_isRelease}" ]
       then 
         saplib_prefix="U$(echo $(Build.BuildId) | rev | cut -c1-4 | rev)"
@@ -33,23 +34,23 @@ steps:
       saplib_rg="${saplib_prefix}-EAUS-SAP_LIBRARY"
 
       # Modify environment value so it starts with u and with length of 5
-      sapsystem_env=${{parameters.sapsystem_env}}
-      sapsystem_isRelease=${sapsystem_env%%$buildId*}
+      saplandscape_env=${{parameters.saplandscape_env}}
+      saplandscape_isRelease=${saplandscape_env%%$buildId*}
 
       [ -z ${{parameters.osImage_publisher}} ] && osImage_publisher="SUSE" || osImage_publisher=${{parameters.osImage_publisher}}
       [[ ${osImage_publisher} == "SUSE" ]] && isSles=true || isSles=false
       
       # subnet is decided by buildId if it is unit test.
       # Otherwise, use 10.10.0.0 for sles and 10.10.1.0 for rhel
-      if [ -z "${sapsystem_isRelease}" ]
+      if [ -z "${saplandscape_isRelease}" ]
       then 
         idx1=${buildId: -1}
         idx2=$((${buildId: -2:1} + 1))
-        sapsystem_prefix="U$(echo $(Build.BuildId) | rev | cut -c1-4 | rev)"
+        saplandscape_prefix="U$(echo $(Build.BuildId) | rev | cut -c1-4 | rev)"
         ha="false"
       else
         idx1=10
-        sapsystem_prefix=${sapsystem_env}
+        saplandscape_prefix=${saplandscape_env}
         ha="true"
         if ${isSles}
         then idx2=11
@@ -62,22 +63,22 @@ steps:
       subnet_iscsi_prefix="10.${idx2}.${idx1}.64/27"
       subnet_app_prefix="10.${idx2}.${idx1}.96/27"
 
-      sapsystem_rg="${sapsystem_prefix}-EAUS-SAP-PRD"
+      saplandscape_rg="${saplandscape_prefix}-EAUS-SAP0-INFRASTRUCTURE"
 
       # If no osImage provided, deploy SLES12SP5
       [ -z "${{parameters.osImage_offer}}" ] && osImage_offer="sles-sap-12-sp5" || osImage_offer=${{parameters.osImage_offer}}
       [ -z "${{parameters.osImage_publisher}}" ] && osImage_publisher="SUSE" || osImage_publisher=${{parameters.osImage_publisher}}
       [ -z "${{parameters.osImage_sku}}" ] && osImage_sku="gen1" || osImage_sku=${{parameters.osImage_sku}}
       
-      repo_dir=$HOME/$sapsystem_rg/sap-hana
-      ws_dir=$HOME/Azure_SAP_Automated_Deployment/WORKSPACES/SAP_SYSTEM/${sapsystem_rg}
+      repo_dir=$HOME/${saplandscape_rg}/sap-hana
+      ws_dir=$HOME/Azure_SAP_Automated_Deployment/WORKSPACES/SAP_LANDSCAPE/${saplandscape_rg}
       deployer_ws_dir=$HOME/Azure_SAP_Automated_Deployment/WORKSPACES/LOCAL/${deployer_rg}
-      input=${ws_dir}/${sapsystem_rg}.json
+      input=${ws_dir}/${saplandscape_rg}.json
       
       echo "=== Checkout required branch ${{parameters.branch_name}} ==="
       if [ ! -d "${repo_dir}" ]
       then
-        mkdir $HOME/${sapsystem_rg}; cd $_
+        mkdir $HOME/${saplandscape_rg}; cd $_
         git clone https://github.com/Azure/sap-hana.git
       fi
       cd $repo_dir && git pull && git checkout ${{parameters.branch_name}}
@@ -94,54 +95,40 @@ steps:
       EOF
 
       tfstate_sa_name=$(az storage account list --resource-group ${saplib_rg} | jq -r "'".[] |  select(.name | contains(\\\"tfstate\\\")).name"'")
-      sap_system_key="${sapsystem_rg}.terraform.tfstate"
-      deployer_tfstate_key=$(az storage blob list --account-name ${tfstate_sa_name} --container-name tfstate --only-show-errors | jq -r "'".[] | select(.name | contains(\\\"INFRASTRUCTURE\\\")).name"'")
+      sap_landscape_key="${saplandscape_rg}.terraform.tfstate"
+      deployer_tfstate_key=$(az storage blob list --account-name ${tfstate_sa_name} --container-name tfstate --only-show-errors | jq -r "'".[] | select(.name | contains(\\\"MGMT-INFRASTRUCTURE\\\")).name"'")
       saplib_tfstate_key=$(az storage blob list --account-name ${tfstate_sa_name} --container-name tfstate --only-show-errors | jq -r "'".[] | select(.name | contains(\\\"LIBRARY\\\")).name"'")
 
-      cp ${repo_dir}/deploy/terraform/run/sap_system/sapsystem.json ${ws_dir}/sapsystem.json
-      cat ${ws_dir}/sapsystem.json \
-      | jq --arg environment "${sapsystem_prefix}" .infrastructure.environment\ =\ \$environment \
+      cp ${repo_dir}/deploy/terraform/run/sap_landscape/saplandscape.json ${ws_dir}/saplandscape.json
+      cat ${ws_dir}/saplandscape.json \
+      | jq --arg saplandscape_rg "${saplandscape_rg}" .infrastructure.resource_group.name\ =\ \$saplandscape_rg \
+      | jq --arg environment "${saplandscape_prefix}" .infrastructure.environment\ =\ \$environment \
       | jq --arg saplib_rg "${saplib_rg}" .infrastructure.vnets.management.saplib_resource_group_name\ =\ \$saplib_rg \
       | jq --arg tfstate_sa_name "${tfstate_sa_name}" .infrastructure.vnets.management.tfstate_storage_account_name\ =\ \$tfstate_sa_name \
       | jq --arg deployer_tfstate_key "${deployer_tfstate_key}" .infrastructure.vnets.management.deployer_tfstate_key\ =\ \$deployer_tfstate_key \
       | jq --arg sap_vnet_address_space "${sap_vnet_address_space}" .infrastructure.vnets.sap.address_space\ =\ \$sap_vnet_address_space \
-      | jq --arg subnet_admin_prefix "${subnet_admin_prefix}" .infrastructure.vnets.sap.subnet_admin.prefix\ =\ \$subnet_admin_prefix \
-      | jq --arg subnet_db_prefix "${subnet_db_prefix}" .infrastructure.vnets.sap.subnet_db.prefix\ =\ \$subnet_db_prefix \
       | jq --arg subnet_iscsi_prefix "${subnet_iscsi_prefix}" .infrastructure.vnets.sap.subnet_iscsi.prefix\ =\ \$subnet_iscsi_prefix \
-      | jq --arg subnet_app_prefix "${subnet_app_prefix}" .infrastructure.vnets.sap.subnet_app.prefix\ =\ \$subnet_app_prefix \
-      | jq --arg ha "${ha}" .databases[].high_availability\ =\ \$ha \
-      | jq --arg osImage_offer "${osImage_offer}" .databases[].os.offer\ =\ \$osImage_offer \
-      | jq --arg osImage_publisher "${osImage_publisher}" .databases[].os.publisher\ =\ \$osImage_publisher \
-      | jq --arg osImage_sku "${osImage_sku}" .databases[].os.sku\ =\ \$osImage_sku \
-      | jq --arg db_systemdb_password "$(hana-pipeline-db-pwd)" .databases[].credentials.db_systemdb_password\ =\ \$db_systemdb_password \
-      | jq --arg os_sidadm_password "$(hana-pipeline-os-pwd)" .databases[].credentials.os_sidadm_password\ =\ \$os_sidadm_password \
-      | jq --arg os_sapadm_password "$(hana-pipeline-os-pwd)" .databases[].credentials.os_sapadm_password\ =\ \$os_sapadm_password \
-      | jq --arg xsa_admin_password "$(hana-pipeline-db-pwd)" .databases[].credentials.xsa_admin_password\ =\ \$xsa_admin_password \
-      | jq --arg cockpit_admin_password "$(hana-pipeline-db-pwd)" .databases[].credentials.cockpit_admin_password\ =\ \$cockpit_admin_password \
-      | jq --arg ha_cluster_password "$(hana-pipeline-os-pwd)" .databases[].credentials.ha_cluster_password\ =\ \$ha_cluster_password \
       | jq --arg saplib_rg "${saplib_rg}" .software.storage_account_sapbits.saplib_resource_group_name\ =\ \$saplib_rg \
       | jq --arg tfstate_sa_name "${tfstate_sa_name}" .software.storage_account_sapbits.tfstate_storage_account_name\ =\ \$tfstate_sa_name \
       | jq --arg saplib_tfstate_key "${saplib_tfstate_key}" .software.storage_account_sapbits.saplib_tfstate_key\ =\ \$saplib_tfstate_key \
-      | jq --arg sap_user "$(hana-smp-nancyc-username)" .software.downloader.credentials.sap_user\ =\ \$sap_user \
-      | jq --arg sap_password "$(hana-smp-nancyc-password)" .software.downloader.credentials.sap_password\ =\ \$sap_password \
       > ${input}
 
       cat ${input}
       
-      echo "=== Deploy sap system from deployer with terraform ==="
+      echo "=== Deploy sap landscape from deployer with terraform ==="
       echo "=== This may take quite a while, please be patient ==="
       terraform -version
       terraform init -upgrade=true -force-copy \
         --backend-config "resource_group_name=${saplib_rg}" \
         --backend-config "storage_account_name=${tfstate_sa_name}" \
         --backend-config "container_name=tfstate" \
-        --backend-config "key=${sap_system_key}" \
+        --backend-config "key=${sap_landscape_key}" \
         ${repo_dir}/deploy/terraform/run/sap_system/
       [ -d ~/.log ] || mkdir -p ~/.log
-      terraform apply -auto-approve -var-file=${input} ${repo_dir}/deploy/terraform/run/sap_system/ 2>~/.log/$(Build.BuildId)_apply_error.log 2>&1>~/.log/$(Build.BuildId)_apply.log
-      if [ -s ~/.log/$(Build.BuildId)_apply_error.log ]; then cat ~/.log/$(Build.BuildId)_apply_error.log; exit 1; fi;
+      terraform apply -auto-approve -var-file=${input} ${repo_dir}/deploy/terraform/run/sap_system/ 2>~/.log/$(Build.BuildId)_sap_landscape_apply_error.log 2>&1>~/.log/$(Build.BuildId)_sap_landscape_apply.log
+      if [ -s ~/.log/$(Build.BuildId)_sap_landscape_apply_error.log ]; then cat ~/.log/$(Build.BuildId)_sap_landscape_apply_error.log; exit 1; fi;
       '
-    displayName: "Deploy new sap system: Branch ${{parameters.branch_name}}"
+    displayName: "Deploy new sap landscape: Branch ${{parameters.branch_name}}"
     condition: or(succeededOrFailed(), always())
     env:
       ARM_CLIENT_ID: $(hana-pipeline-spn-id)
