--- a/.pipeline/tf-release.yml
+++ b/.pipeline/tf-release.yml
@@ -32,6 +32,11 @@ stages:
           az group update --resource-group $sapsystem_rg --set tags.Delete=True
           az group delete -n $sapsystem_rg -y
 
+          saplandscape_rg="UNIT-EAUS-SAP0-INFRASTRUCTURE"
+          echo "=== Mark and try to delete rg $saplandscape_rg ==="
+          az group update --resource-group $saplandscape_rg --set tags.Delete=True
+          az group delete -n $saplandscape_rg -y
+
           saplib_rg="UNIT-EAUS-SAP_LIBRARY"
           echo "=== Mark and try to delete rg $saplib_rg ==="
           az group update --resource-group $saplib_rg --set tags.Delete=True
@@ -83,8 +88,27 @@ stages:
       - template: templates/util/remove-agent-from-deployer-nsg.yml
         parameters:
           deployer_env: "UNIT"
-  - job: createSAPSystemSLES
+  - job: createSAPLandscape
     dependsOn: createSAPLib
+    steps:
+      - template: templates/util/prepare-agent.yml
+      - template: templates/util/collect-deployer-info.yml
+        parameters:
+          deployer_env: "UNIT"
+      - template: templates/util/add-agent-to-deployer-nsg.yml
+        parameters:
+          deployer_env: "UNIT"
+      - template: templates/saplandscape/create-saplandscape-steps.yml
+        parameters:
+          branch_name: $(sourceBranchName)
+          deployer_env: "UNIT"
+          saplib_env: "UNIT"
+          saplandscape_env: "UNIT"
+      - template: templates/util/remove-agent-from-deployer-nsg.yml
+        parameters:
+          deployer_env: "UNIT"
+  - job: createSAPSystemSLES
+    dependsOn: createSAPLandscape
     steps:
       - template: templates/util/prepare-agent.yml
       - template: templates/util/collect-deployer-info.yml
@@ -106,7 +130,7 @@ stages:
         parameters:
           deployer_env: "UNIT"
   - job: createSAPSystemRHEL
-    dependsOn: createSAPLib
+    dependsOn: createSAPLandscape
     steps:
       - template: templates/util/prepare-agent.yml
       - template: templates/util/collect-deployer-info.yml
